# Investo

./: .gitignore  README.md  app.py  dummy_data.json  pyproject.toml
.github/workflows/: pylint.yml
backend/: logic.py
database/: data.json
frontend/: app.py
